# encrypted-scholarship

./: .gitignore  .pre-commit-config.yaml  8.roadmap.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  example.sol  package-lock.json  package.json  paper.md  paper.tex  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml
co-circom/: ScholarshipCheck.circom  ScholarshipCheck.r1cs  ScholarshipCheck.sym  ScholarshipCheck_0000.zkey  ScholarshipCheck_0001.zkey  circuit.circom  circuit.r1cs  circuit.sym  pot12_0001.ptau  verification_key.json
co-circom/ScholarshipCheck_cpp/: Makefile  ScholarshipCheck.cpp
co-circom/ScholarshipCheck_js/: ScholarshipCheck.wasm
co-circom/circuit_cpp/: circuit.cpp
co-circom/circuit_js/: circuit.wasm
doc/: 1.introduction.md  2.background.md  3.architecture.md  3.example.md  4.architecture.md  4.example.md  5.detail.md  5.issue.md  6.prototype.md  7.prerequierment.md  7.roadmap.md  8.roadmap.md  zkFHE × scholarship.md
example/: client.rs  example.rs  server.rs
fhe/src/: main.rs
fhenix/: Scholarship.sol  package-lock.json
frontend/: package-lock.json  package.json
hardhat/: package-lock.json  package.json
hardhat/contracts/: Example.sol  ScholarshipFund.sol
src/: client.rs  ecdsa.rs  example.rs  lib.rs  main.rs  ops.rs  server.rs
src/ecdsa/: helper.rs
src/ops/: group_jacobian.rs  mersenne.rs
tfhe/: Cargo.toml
tfhe/src/: bob_client.rs  fhe_server.rs  main.rs
tfhe/src/ecdsa/: ecdsa.rs  numeral.rs  ops.rs
tfhe/src/ecdsa/ops/: group_jacobian.rs  mersenne.rs  native.rs  secp256k1.rs
(+12 files in other folders)
