[package]
name = "my_tfhe_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
hex = "0.4"
rand = "0.8"
ethers = { version = "2.0", features = ["abigen"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6.12"
